--- a/apps/home/templates/home/base.html
+++ b/apps/home/templates/home/base.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" href="/static/home/css/style.css">
+        <meta charset="utf-8">
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <title>Tube Planet</title>
+        <link rel="stylesheet" type="text/css" href="/static/home/css/main.css">
+        <link rel="stylesheet" href="https://file.myfontastic.com/PGGmqzqrLjFoaYmutfGF8j/icons.css" >
     </head>
     
     <body>
         {% block content %}
         {% endblock %}
+        <script type="text/javascript" src="/static/home/js/jquery.js"></script>
     </body>
 </html>
