--- a/apps/home/static/home/css/main.css
+++ b/apps/home/static/home/css/main.css
@@ -1,1 +1,214 @@
-*{box-sizing:border-box;font-family:sans-serif}body{margin:0;padding:0;line-height:1.6}a{text-decoration:none;color:inherit}img{max-width:100%;height:auto}.m-container{margin-top:2em;max-width:1200px;margin-right:auto;margin-left:auto}.brand__img{display:block;margin-right:auto;margin-left:auto;width:50%}@media screen and (min-width: 768px){.brand__img{width:30%}}.search{text-align:center;margin-top:1.7em}.search__input{border:none;border-bottom:1px solid #01922E;text-align:center;width:70%;padding:1em}.search__button{background:#66BB6A;border:none;color:#fff;width:70%;padding:1.2em;margin:.7em auto}.search__button:hover{background:#4cac51}.options{display:-webkit-flex;display:-ms-flexbox;display:flex}.footer-brand{margin-top:1em}.footer-brand__img{display:block;margin-right:auto;margin-left:auto;width:25%;margin:.5em auto}@media screen and (min-width: 768px){.footer-brand__img{width:15%}}.footer-brand-wrapper{display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;height:60px}@media screen and (min-width: 480px){.footer-brand-wrapper{height:110px}}@media screen and (min-width: 768px){.footer-brand-wrapper{height:100px}}.successful-message,.error-message{width:70%;padding:.5em;text-align:center;margin:.3em auto}.successful-message{background:#F7FEEF;border:1px solid #8abe47;color:#8abe47}.error-message{background:#FFAB9E;border:1px solid #DB190C;color:#DB190C}.formulario h2{font-size:16px;color:#001F3F;margin-bottom:20px;margin-left:20px}.formulario>div{text-align:center}.formulario label{display:inline-block;cursor:pointer;color:#01922E;position:relative;padding:5px 15px 5px 51px;font-size:1em;border-radius:5px;transition:all 0.3s ease}.formulario label:hover{background:rgba(0,116,217,0.1)}.formulario label:before{content:"";display:inline-block;width:17px;height:17px;position:absolute;left:15px;border-radius:50%;background:none;border:3px solid #01922E}.formulario input[type="radio"]{display:none}.formulario input[type="radio"]:checked+label{padding:5px 15px;background:#01922E;border-radius:2px;color:#fff}.formulario input[type="radio"]:checked+label:before{display:none}.formulario .checkbox label:before{border-radius:3px}.formulario .checkbox input[type="checkbox"]{display:none}.formulario .checkbox input[type="checkbox"]:checked+label{background:#01922E;color:#fff;padding:5px 15px}.formulario .checkbox input[type="checkbox"]:checked+label:before{display:none}
+* {
+    box-sizing: border-box;
+    font-family: sans-serif
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    line-height: 1.6
+}
+
+a {
+    text-decoration: none;
+    color: inherit
+}
+
+img {
+    max-width: 100%;
+    height: auto
+}
+
+.m-container {
+    margin-top: 2em;
+    max-width: 1200px;
+    margin-right: auto;
+    margin-left: auto
+}
+
+.brand__img {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    width: 50%
+}
+
+@media screen and (min-width: 768px) {
+    .brand__img {
+        width: 30%
+    }
+}
+
+.search {
+    text-align: center;
+    margin-top: 1.7em
+}
+
+.search__input {
+    border: none;
+    border-bottom: 1px solid #01922E;
+    text-align: center;
+    width: 70%;
+    padding: 1em
+}
+
+.search__button {
+    background: #66BB6A;
+    border: none;
+    color: #fff;
+    width: 70%;
+    padding: 1.2em;
+    margin: .7em auto
+}
+
+.search__button:hover {
+    background: #4cac51
+}
+
+.options {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex
+}
+
+.footer-brand {
+    margin-top: 1em
+}
+
+.footer-brand__img {
+    display: block;
+    margin-right: auto;
+    margin-left: auto;
+    width: 25%;
+    margin: 0 auto
+}
+
+@media screen and (min-width: 768px) {
+    .footer-brand__img {
+        width: 15%
+    }
+}
+
+.footer-brand-wrapper {
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    -webkit-justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    height: 60px
+}
+
+@media screen and (min-width: 480px) {
+    .footer-brand-wrapper {
+        height: 110px
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .footer-brand-wrapper {
+        height: 100px
+    }
+}
+
+.messages {
+    width: 70%;
+    margin: .6em auto;
+    padding: 1em;
+}
+.successful-message,
+.error-message {
+    padding: 1em;
+    text-align: center;
+    display: none;
+}
+
+.successful-message {
+    background: #F7FEEF;
+    border: 1px solid #8abe47;
+    color: #8abe47
+}
+
+.error-message {
+    background: #FFAB9E;
+    border: 1px solid #DB190C;
+    color: #DB190C;
+}
+
+.form-section {
+    margin-bottom: 25px;
+}
+
+.formulario h2 {
+    font-size: 16px;
+    color: #001F3F;
+    margin-bottom: 20px;
+    margin-left: 20px
+}
+
+.formulario>div {
+    text-align: center
+}
+
+.formulario label {
+    display: inline-block;
+    cursor: pointer;
+    color: #01922E;
+    position: relative;
+    padding: 5px 15px 5px 51px;
+    font-size: 1em;
+    border-radius: 5px;
+    transition: all 0.3s ease
+}
+
+.formulario label:hover {
+    background: rgba(0, 116, 217, 0.1)
+}
+
+.formulario label:before {
+    content: "";
+    display: inline-block;
+    width: 17px;
+    height: 17px;
+    position: absolute;
+    left: 15px;
+    border-radius: 50%;
+    background: none;
+    border: 3px solid #01922E
+}
+
+.formulario input[type="radio"] {
+    display: none
+}
+
+.formulario input[type="radio"]:checked+label {
+    padding: 5px 15px;
+    background: #01922E;
+    border-radius: 2px;
+    color: #fff
+}
+
+.formulario input[type="radio"]:checked+label:before {
+    display: none
+}
+
+.formulario .checkbox label:before {
+    border-radius: 3px
+}
+
+.formulario .checkbox input[type="checkbox"] {
+    display: none
+}
+
+.formulario .checkbox input[type="checkbox"]:checked+label {
+    background: #01922E;
+    color: #fff;
+    padding: 5px 15px
+}
+
+.formulario .checkbox input[type="checkbox"]:checked+label:before {
+    display: none
+}
