--- a/apps/home/templates/home/home.html
+++ b/apps/home/templates/home/home.html
@@ -12,9 +12,9 @@
                 </div>
                 <div class="radio">
                     <p style="text-transform: uppercase">Choose your file format</p>
-                    <input type="radio" name="format"  id="audio" value="" checked="checked">
+                    <input type="radio" name="option"  id="audio" value="mp3" checked="checked">
                     <label for="audio">Audio (MP3)</label>
-                    <input type="radio" name="option"  id="video">
+                    <input type="radio" name="option"  id="video" value="mp4">
                     <label for="video">Video (MP4)</label>
                 </div>
             </form>
