--- a/apps/home/templates/home/base.html
+++ b/apps/home/templates/home/base.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <title>Tube Planet</title>
+        <link rel="stylesheet" type="text/css" href="/static/home/css/materialize.css">
         <link rel="stylesheet" type="text/css" href="/static/home/css/main.css">
         <link rel="stylesheet" href="https://file.myfontastic.com/PGGmqzqrLjFoaYmutfGF8j/icons.css" >
     </head>
@@ -12,5 +13,10 @@
         {% block content %}
         {% endblock %}
         <script type="text/javascript" src="/static/home/js/jquery.js"></script>
+        <script>
+                $("#search-button").on('click', function() {
+                    $("#spin-engine").css('display', 'block');
+                });
+        </script>
     </body>
 </html>
