--- a/apps/home/templates/home/base.html
+++ b/apps/home/templates/home/base.html
@@ -14,8 +14,9 @@
         {% endblock %}
         <script type="text/javascript" src="/static/home/js/jquery.js"></script>
         <script>
-                $("#search-button").on('click', function() {
-                    $("#spin-engine").css('display', 'block');
+                $("#search-button").on("click", function() {
+                    $("#spin-engine").css("display", "block");
+                    $(".successful-message, .error-message").css("display", "none");
                 });
         </script>
     </body>
