--- a/apps/home/templates/home/base.html
+++ b/apps/home/templates/home/base.html
@@ -1,23 +1,29 @@
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="initial-scale=1, maximum-scale=1">
         <title>Tube Planet</title>
-        <link rel="stylesheet" type="text/css" href="/static/home/css/materialize.css">
-        <link rel="stylesheet" type="text/css" href="/static/home/css/main.css">
-        <link rel="stylesheet" href="https://file.myfontastic.com/PGGmqzqrLjFoaYmutfGF8j/icons.css" >
+
+        <!-- UIkit CSS -->
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.27/css/uikit.min.css" />
+        
+        <!-- jQuery is required -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        
+        <!-- UIkit JS -->
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.27/js/uikit.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.0.0-beta.27/js/uikit-icons.min.js"></script>
+
+        <link rel="stylesheet" href="{% static 'home/css/custom.css' %}" />
+        <link rel="icon" href="{% static 'home/img/favicon.ico' %}" type="image/ico">
     </head>
     
     <body>
         {% block content %}
         {% endblock %}
-        <script type="text/javascript" src="/static/home/js/jquery.js"></script>
-        <script>
-                $("#search-button").on("click", function() {
-                    $("#spin-engine").css("display", "block");
-                    $(".successful-message, .error-message").css("display", "none");
-                });
-        </script>
+        <script src="{% static 'home/js/events.js' %}"></script>
+        <script>document.getElementById("search-input").focus();</script>
     </body>
 </html>
